--- a/Data/Settings.json
+++ b/Data/Settings.json
@@ -1,5 +1,5 @@
 {
-  "owner": "204372456339800065",
+  "owner": "461945887623479297",
   "prefix": "!",
-  "token": "MjE1MTkxNzI0MDE5MDIzODcy.DzThvQ.qSaK0esEvVGi-u0VD_G2S_r7vcE"
+  "token": ""
 }
